# iconbox

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: DetailPanel.tsx  IconCard.tsx  IconGrid.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx
